[package]
name = "bootcamp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"  # Web framework
tokio = { version = "1", features = ["full"] }  # Async runtime
rand = "0.8"  # Random password generation
serde = { version = "1", features = ["derive"] }  # JSON serialization
serde_json = "1"  # JSON handling
